css/style.css
/* ... */
	/*== links list ==*/
	.links {
		z-index:3;
	  text-align:center;
	}
	.links-list {
		list-style:none;
		display:inline-block;
		border-radius:20px;
		margin:0;
		text-align:center;
	}
	.links li{
		padding:0;
		display:inline-block;
		background:rgba(255,255,255,0.4);
		border:1px solid #fff;
		opacity:0.6;
		margin:20px 10px 0;
		text-align:center;
		font-size:18px;
		width:44px;
		height:44px;

		border-radius:40px;
		transition:opacity 0.3s;
	}
	.links li:hover {
		opacity:0.9;
	}
	.links li:before {
		display:none;
	}
	.links a {
		border:0;
		display:block;
		outline:0;
		color:#fff!important;
	}
	.links a span {
		display:none;
	}
	.links i {
		line-height:43px;
	}
	i.fa-bandcamp:before {
		content:"\f04d";
	}
	i.fa-bandcamp {
		transform:skew(-13deg);
	}


	/*== scroll-knobs (knob-bottom in .content div ==*/
	#knob {
		position:absolute;
		top:-67px;
		left:50%;
		margin-left:-27px;
	    color:#fff;
		height:54px;
		width:54px;
		opacity:0.6;
		border-radius:27px;
		background-color:rgba(255,255,255,0.2);
		border:1px solid #fff;
		outline:0;
		text-shadow: 0 0 1px #000;
		transition:opacity 0.3s;
		text-align: center;
	}

	#knob-bottom {
		margin:0 auto;
		border:0;
		text-align:center;
		border-radius:12px;
		outline:0;
		display:block;
		height:54px;
		width:54px;
		border-radius:27px;
		border:1px solid #555;
		color:#555;
		outline:0;
		transition:all 0.3s;
		text-align: center;

	}
	#knob:hover {
		opacity:0.9;
	}
	#knob-bottom:hover {
		background-color:#eee;
	}
	#knob i, #knob-bottom i {
		vertical-align:middle;
		height: 50px;
		font-size:31px;
	}
  #knob i {
    line-height:51px;
  }
  #knob-bottom i {
    line-height:46px;
  }

/*========== /HOME PAGE ==========*/

/*========== CONTENT PAGE ==========*/
.content-container {
	z-index:1;
	padding-top:1px;
	background:#fafafa;
	position:relative;
}
.content {
	margin:0 auto;
	max-width:100%;
	width:460px;
	text-align:justify;
	padding:20px 20px 0;
	hyphens: auto;
	-moz-hyphens: auto;/* prefixfree.js is too slow for this one;*/
}
.bottom {
  background:#fafafa;
  padding:0 0 20px;
  position:relative;
}
.article {
  padding-bottom:60px;
  position:relative;
}
.article:before {
	border:0;
  	border-top: 1px solid #999;
	display:block;
	content:"";
	position:absolute;width:100%;
	bottom:25px;
	left:0;

}
.article:first-child {
  margin-top:0px;
}
/*========== /CONTENT PAGE ==========*/


/*========== MEDIAS FRAMES ==========*/
.vimeo, .bandcamp, .soundcloud, .youtube, .dailymotion  {
	height:220px;
	margin-top:20px;
	background-color:#fff;
	background-size:cover;
	background-position:center;
}
.vimeo iframe, .bandcamp iframe, .youtube iframe, .dailymotion iframe  {
	border:0;
	display:block;
	width:100%;
	height:218px;
	background:transparent;
}
.bandcamp iframe, .bandcamp {
	height:120px;
	border:0;
}
.soundcloud.tracks iframe, .soundcloud.tracks {
	height:166px;
	border:0;
	width:100%;
}
.soundcloud.playlists iframe, .soundcloud.playlists {
	height:320px;
	width:100%;
	border:0;
}
.soundcloud.playlists {
  height:267px;
}
/*========== /MEDIAS FRAMES ==========*/



/*========== SLIDER ==========*/
.slider {
	height: 220px;
	margin-top:20px;
}
.swiper-container {
	height: 220px;
}
.swiper-slide {
	height: 220px;
	background-size:cover;
	background-position:center;
	background-color:#000;
	background-repeat:no-repeat;
}
.fullscreen {
	border:1px solid #333!important;
	border-radius:0!important;
	background-size:contain!important;
	background-repeat: no-repeat;
}
.fullscreen .swiper-container  {
	height:100%;
}
.fullscreen .fa-expand:before{
	content:"\f066"
}
.fullscreen .fa-compress:before{
	content:"\f065"
}
#layer {
	background-color:#111;
	position:fixed;
	width:100%;
	height:100%;
	top:0;
	left:0;
	z-index:999;
	display:none;
	background-image:url(loaderb.gif);
	background-position: center;
	background-repeat: no-repeat;
}
/*========== /SLIDER ==========*/




/*========== ARTICLES LIST ==========*/
.sub-article-list {
	transition:opacity 0.3s;
	opacity:1;
	border-top:1px solid #ccc;
	margin-top:20px;
}
.sub-article-list .sub-article-list .sub-article {
  padding:0 10px 20px;
  border-left:5px solid #eee;
  border-right:5px solid #eee;
}
.sub-article-list .sub-article-list .sub-article-list-footer {
  padding:0 10px;
}
.sub-article-list.loading {
	background:url(loaderw.gif) center no-repeat;
}
.sub-article-list.loading * {
	opacity:0.8;
}
.sub-article {
	border-top:1px solid #fff;
	border-bottom:1px solid #ccc;
	padding-bottom:20px;
	max-height:80px;
	overflow:hidden;
}
.sub-article.past .sub-article-date {
  color:#555;
}
.sub-article.today .sub-article-date, .sub-article.futur .sub-article-date {
	color:#298;
}

.sub-article:first-child {
	border-top:0;
}
.sub-article .sub-article-title {
	outline:0;

}
.previous-article {
	height:80px;
	line-height:80px;
	padding-left:10px;
	float:right;
	display:none;
	outline:0;
}
.sub-article.focus > .previous-article {
  display:block;
}
.sub-article h3 {
	margin:0px 0 0;
	height:80px;
	line-height:80px;
	position:relative;
	overflow:hidden;
	text-align: left;
  white-space:nowrap;
  text-overflow:ellipsis;
}
.sub-article.focus  {
	max-height:none;
}
.sub-article  h3 i.star {
 a color:#555;
}
.sub-article.focus  > a h3 i.star:before{
	content:"\f192";
}
.sub-article-date {
  font-weight:400;
  float:none;
  display:block;
  position:absolute;top:20px;
}
.sub-article-list-footer {
	border-top:1px solid #fff;
	text-align:center;
	font-size:0px;
}
.pagination-anchor {
  position:relative;
}
.pagination-anchor a {
  display: block;
  position: absolute;
  bottom: -22px;
  height: 1px;
}
.sub-article-pagination {
	display:inline-block;
	line-height:19px;
}
.sub-article-pagination .sep {
	display:none;
}
.sub-article-pagination strong, .sub-article-pagination a {
		border:1px solid #555;
		color:#555;
		margin:20px 10px 0;
		text-align:center;
		font-size:16px;
		width:32px;
		height:32px;
		line-height:30px;
		border-radius:34px;
		display:inline-block;
		outline:0;
}
/* ... */

